examples/bad/ERROR_NOT_A_LIST/tail.st
language core;

extend with #lists;

fn main(arg : Nat) -> [Nat] {
  return (fn (a : Nat) { return List::tail(arg) })(0)
}

//ERROR_NOT_A_LIST
